k3s-arr/prowlarr/prowlarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
  labels:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/part-of: arr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:latest
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
          ports:
            - containerPort: 9696
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
        - name: media
          hostPath:
            path: /mnt/gluster/media
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
  labels:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/part-of: arr
spec:
  selector:
    app.kubernetes.io/name: prowlarr
  ports:
    - port: 80
      targetPort: 9696
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: media
  labels:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/part-of: arr
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: prowlarr.rahl.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 80
    - host: prowlarr.fractal-financial.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 80
